--- a/package.json
+++ b/package.json
@@ -3,22 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@craco/craco": "^6.1.1",
     "@prismicio/client": "^4.0.0",
     "apollo-client": "^2.6.10",
     "apollo-link-prismic": "^1.0.8",
     "bootstrap": "^4.6.0",
     "graphql-tag": "^2.11.0",
+    "i18next": "^20.2.2",
+    "i18next-browser-languagedetector": "^6.1.0",
+    "i18next-http-backend": "^1.2.1",
+    "json5": "^2.2.0",
     "luxon": "^1.26.0",
     "prismic-reactjs": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.8.13",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
