connect to blog post and blog data types on prismic

--- a/public/locales/cn/default.json5
+++ b/public/locales/cn/default.json5
@@ -8,6 +8,7 @@
   Services: "服务",
   People: "团队",
   Contact: "联系我们",
+  Blog: "博客",
 
   // footer
   "Enough Talk, Lets Build Something Together": "一说不如一做，让我们用事实说话",
